cmake_minimum_required(VERSION 3.6.0)

set (BUILD_SHARED_LIBS ON)
set (CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
set (CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
set (CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)

if (CMAKE_SYSTEM_NAME STREQUAL Windows)
    set (CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
    if (CMAKE_SYSTEM_PROCESSOR STREQUAL i686)
        set (CMAKE_C_COMPILER i686-w64-mingw32-gcc)
        set (CMAKE_CXX_COMPILER i686-w64-mingw32-g++)
        set (CMAKE_RC_COMPILER i686-w64-mingw32-windres)
        set (CMAKE_FIND_ROOT_PATH /usr/local/opt/mingw-w64/toolchain-i686)
    elseif (CMAKE_SYSTEM_PROCESSOR STREQUAL x86_64)
        set (CMAKE_C_COMPILER x86_64-w64-mingw32-gcc)
        set (CMAKE_CXX_COMPILER x86_64-w64-mingw32-g++)
        set (CMAKE_RC_COMPILER x86_64-w64-mingw32-windres)
        set (CMAKE_FIND_ROOT_PATH /usr/local/opt/mingw-w64/toolchain-x86_64)
    endif ()
endif()

project (adder C CXX)
add_library(adder adder.c)